kubernetes/karen-app-python/vproappdep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  labels:
    app: flask-app
spec:
  replicas: 2  # Adjust replicas as needed
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          image: sidnal08/flask-app:latest  # Replace with your Docker Hub username
          ports:
            - containerPort: 5000
