kubernetes/karen-app-python/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80  # Exposing on port 80
      targetPort: 5000  # Flask app runs on 5000
  type: LoadBalancer  # Exposes the service externally with an AWS ELB
