kubernetes/karen-app-python/appingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"  # Requires an Ingress Controller
spec:
  rules:
    - host: flask-app.devopswithsiddharth.live  # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-app-service
                port:
                  number: 80
